# fastapi_todo

./: .env  pyproject.toml
fastapi_learning/: main.py  settings.py
