[tool.poetry]
name = "fastapi-learning"
version = "0.1.0"
description = ""
authors = ["drahmed999 <ahmedqureshi999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
sqlmodel = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
